--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "@roenlie/mirage-docs",
 	"version": "1.0.0",
 	"description": "",
+	"author": "Kristoffer Roen-Lie",
+	"license": "MIT",
 	"main": "dist/index.js",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -14,8 +16,6 @@
 		"updatedeps": "pnpm update --interactive",
 		"package:local": "pnpm pack --pack-destination _packages/"
 	},
-	"author": "",
-	"license": "MIT",
 	"dependencies": {
 		"@custom-elements-manifest/analyzer": "^0.6.6",
 		"@monaco-editor/loader": "^1.3.2",
@@ -23,13 +23,13 @@
 		"bootstrap-icons": "^1.10.2",
 		"deepmerge-ts": "^4.2.2",
 		"globby": "^13.1.2",
-		"highlight.js": "^11.6.0",
+		"highlight.js": "^11.7.0",
 		"lit": "^2.4.1",
 		"markdown-it": "^13.0.1",
 		"markdown-it-anchor": "^8.6.5",
 		"monaco-editor": "^0.34.1",
 		"tslib": "^2.4.1",
-		"vite": "^3.2.3"
+		"vite": "^3.2.4"
 	},
 	"devDependencies": {
 		"@eyeshare/eslint-config": "0.1.1-ci.23",
@@ -37,13 +37,13 @@
 		"@types/markdown-it": "^12.2.3",
 		"@types/node": "18.8.2",
 		"@types/sharedworker": "^0.0.85",
-		"@typescript-eslint/eslint-plugin": "^5.43.0",
-		"@typescript-eslint/parser": "^5.43.0",
-		"eslint": "^8.27.0",
+		"@typescript-eslint/eslint-plugin": "^5.44.0",
+		"@typescript-eslint/parser": "^5.44.0",
+		"eslint": "^8.28.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-lit": "^1.6.1",
 		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.8.4"
+		"typescript": "^4.9.3"
 	}
 }
