--- a/package.json
+++ b/package.json
@@ -21,34 +21,39 @@
 		"package:local": "pnpm pack --pack-destination _packages/"
 	},
 	"dependencies": {
-		"@custom-elements-manifest/analyzer": "^0.6.6",
+		"@custom-elements-manifest/analyzer": "^0.6.8",
 		"@monaco-editor/loader": "^1.3.2",
 		"@sindresorhus/slugify": "^2.1.1",
-		"bootstrap-icons": "^1.10.2",
 		"deepmerge-ts": "^4.2.2",
-		"globby": "^13.1.2",
+		"globby": "^13.1.3",
 		"highlight.js": "^11.7.0",
-		"lit": "^2.4.1",
 		"markdown-it": "^13.0.1",
-		"markdown-it-anchor": "^8.6.5",
+		"markdown-it-anchor": "^8.6.6",
 		"monaco-editor": "^0.34.1",
-		"tabbable": "^6.0.1",
-		"tslib": "^2.4.1",
-		"vite": "^3.2.5"
+		"tabbable": "^6.0.1"
+	},
+	"peerDependencies": {
+		"lit": "*",
+		"vite": "*",
+		"tslib": "*"
 	},
 	"devDependencies": {
+		"tslib": "^2.4.1",
+		"lit": "^2.6.1",
+		"vite": "^4.0.4",
+		"bootstrap-icons": "^1.10.3",
 		"@roenlie/eslint-config": "^1.0.0",
 		"@roenlie/tsconfig": "^1.0.0",
 		"@types/markdown-it": "^12.2.3",
-		"@types/node": "18.8.2",
-		"@types/sharedworker": "^0.0.85",
-		"@typescript-eslint/eslint-plugin": "^5.45.1",
-		"@typescript-eslint/parser": "^5.45.1",
-		"eslint": "^8.29.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-lit": "^1.7.0",
+		"@types/node": "18.11.18",
+		"@types/sharedworker": "^0.0.88",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
+		"@typescript-eslint/parser": "^5.48.1",
+		"eslint": "^8.31.0",
+		"eslint-plugin-import": "^2.27.4",
+		"eslint-plugin-lit": "^1.8.0",
 		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.4"
 	}
 }
