--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build && tsc",
+		"test": "vitest run --config ./tests/vite.config.ts",
 		"clean": "rimraf node_modules dist *.tsbuildinfo",
 		"updatedeps": "pnpm update --interactive",
 		"package:local": "pnpm pack --pack-destination _packages/"
@@ -54,6 +55,7 @@
 		"rimraf": "^4.0.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
-		"vite": "^4.0.4"
+		"vite": "^4.0.4",
+		"vitest": "^0.27.2"
 	}
 }
