--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 	"include": [
 		"./src/**/*.ts",
 		"./src/**/*.js",
-		"./typings/**/*.d.ts"
+		"./typings/**/*.d.ts",
 	],
 	"exclude": [
 		"./**/*.test.ts",
