Ongoing prosess to add global search support through lyrasearch. some styling changes aswell.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,15 @@
 		"incremental": false,
 		"types": [
 			"vite/client",
-			"sharedworker",
 			"node",
-		]
+			"sharedworker"
+		],
+		"lib": [
+			"ESNext",
+			"DOM",
+			"DOM.Iterable",
+			"webworker"
+		],
 	},
 	"include": [
 		"./src/**/*.ts",
