--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"types": "dist/index.d.ts",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --config ./docs/vite.config.ts",
 		"build": "vite build && tsc",
 		"test": "vitest run --config ./tests/vite.config.ts",
 		"clean": "rimraf node_modules dist *.tsbuildinfo",
@@ -23,15 +23,19 @@
 	},
 	"dependencies": {
 		"@custom-elements-manifest/analyzer": "^0.6.8",
+		"@lyrasearch/lyra": "^0.4.10",
+		"@lyrasearch/plugin-data-persistence": "^0.1.1",
+		"@lyrasearch/plugin-parsedoc": "^0.1.0",
 		"@monaco-editor/loader": "^1.3.2",
 		"@sindresorhus/slugify": "^2.2.0",
-		"deepmerge-ts": "^4.2.2",
+		"deepmerge-ts": "^4.3.0",
 		"globby": "^13.1.3",
 		"highlight.js": "^11.7.0",
 		"markdown-it": "^13.0.1",
-		"markdown-it-anchor": "^8.6.6",
-		"monaco-editor": "^0.34.1",
-		"tabbable": "^6.0.1"
+		"markdown-it-anchor": "^8.6.7",
+		"monaco-editor": "^0.36.0",
+		"rollup-plugin-copy": "^3.4.0",
+		"tabbable": "^6.1.1"
 	},
 	"peerDependencies": {
 		"lit": "*",
@@ -40,14 +44,15 @@
 	},
 	"devDependencies": {
 		"@roenlie/eslint-config": "^1.0.0",
+		"@roenlie/mirage-docs": "link:.",
 		"@roenlie/tsconfig": "^1.0.0",
 		"@types/markdown-it": "^12.2.3",
-		"@types/node": "18.11.18",
+		"@types/node": "18.14.2",
 		"@types/sharedworker": "^0.0.91",
-		"@typescript-eslint/eslint-plugin": "^5.50.0",
-		"@typescript-eslint/parser": "^5.50.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
 		"bootstrap-icons": "^1.10.3",
-		"eslint": "^8.33.0",
+		"eslint": "^8.35.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-lit": "^1.8.2",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
@@ -55,7 +60,7 @@
 		"rimraf": "^4.1.2",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.1",
-		"vitest": "^0.28.3"
+		"vite": "^4.1.4",
+		"vitest": "^0.29.1"
 	}
 }
