--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@custom-elements-manifest/analyzer": "^0.6.8",
 		"@lyrasearch/lyra": "^0.4.10",
 		"@lyrasearch/plugin-data-persistence": "^0.1.1",
+		"@lyrasearch/plugin-match-highlight": "^0.1.0",
 		"@lyrasearch/plugin-parsedoc": "^0.1.0",
 		"@monaco-editor/loader": "^1.3.2",
 		"@sindresorhus/slugify": "^2.2.0",
