--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 	},
 	"devDependencies": {
 		"@roenlie/eslint-config": "^1.0.0",
-		"@roenlie/mirage-docs": "link:.",
+		"@roenlie/mirage-docs": "@roenlie/mirage-docs",
 		"@roenlie/tsconfig": "^1.0.0",
 		"@types/markdown-it": "^12.2.3",
 		"@types/node": "18.14.2",
