--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@roenlie/mirage-docs",
-	"version": "1.2.2",
+	"version": "1.3.0",
 	"description": "",
 	"author": "Kristoffer Roen-Lie",
 	"license": "MIT",
@@ -15,11 +15,14 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --config ./docs/vite.config.ts",
+		"preview": "vite preview --config ./docs/vite.config.ts",
 		"build": "vite build && tsc",
+		"build:preview": "vite build --config ./docs/vite.config.ts",
 		"test": "vitest run --config ./tests/vite.config.ts",
 		"clean": "rimraf node_modules dist *.tsbuildinfo",
 		"updatedeps": "pnpm update --interactive",
-		"package:local": "pnpm pack --pack-destination _packages/"
+		"package:local": "pnpm pack --pack-destination _packages/",
+		"increment-version": "pnpm mimic increment-version"
 	},
 	"dependencies": {
 		"@custom-elements-manifest/analyzer": "^0.6.8",
@@ -45,7 +48,8 @@
 	},
 	"devDependencies": {
 		"@roenlie/eslint-config": "^1.0.0",
-		"@roenlie/mirage-docs": "@roenlie/mirage-docs",
+		"@roenlie/mimic-nodejs": "^0.0.4",
+		"@roenlie/mirage-docs": "link:",
 		"@roenlie/tsconfig": "^1.0.0",
 		"@types/markdown-it": "^12.2.3",
 		"@types/node": "18.14.2",
