--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
 		"increment-version": "pnpm mimic increment-version"
 	},
 	"dependencies": {
-		"@custom-elements-manifest/analyzer": "^0.6.9",
-		"@lyrasearch/lyra": "^0.4.12",
-		"@lyrasearch/plugin-data-persistence": "^0.1.1",
-		"@lyrasearch/plugin-match-highlight": "^0.1.0",
-		"@lyrasearch/plugin-parsedoc": "^0.1.0",
+		"@custom-elements-manifest/analyzer": "^0.8.4",
 		"@monaco-editor/loader": "^1.3.3",
-		"@sindresorhus/slugify": "^2.2.0",
-		"deepmerge-ts": "^4.3.0",
-		"globby": "^13.1.3",
-		"highlight.js": "^11.7.0",
+		"@orama/orama": "^1.1.1",
+		"@orama/plugin-data-persistence": "^1.1.1",
+		"@orama/plugin-match-highlight": "^1.1.1",
+		"@orama/plugin-parsedoc": "^1.1.1",
+		"@sindresorhus/slugify": "^2.2.1",
+		"deepmerge-ts": "^5.1.0",
+		"globby": "^13.2.2",
+		"highlight.js": "^11.8.0",
 		"markdown-it": "^13.0.1",
 		"markdown-it-anchor": "^8.6.7",
-		"monaco-editor": "^0.36.1",
+		"monaco-editor": "^0.40.0",
 		"rollup-plugin-copy": "^3.4.0",
-		"tabbable": "^6.1.1"
+		"tabbable": "^6.2.0"
 	},
 	"peerDependencies": {
 		"lit": "*",
@@ -48,24 +48,24 @@
 	},
 	"devDependencies": {
 		"@roenlie/eslint-config": "^1.0.0",
-		"@roenlie/mimic-nodejs": "^0.0.4",
+		"@roenlie/mimic-nodejs": "^0.0.9",
 		"@roenlie/mirage-docs": "link:",
-		"@roenlie/tsconfig": "^1.0.0",
+		"@roenlie/tsconfig": "^1.0.1",
 		"@types/markdown-it": "^12.2.3",
-		"@types/node": "18.14.2",
-		"@types/sharedworker": "^0.0.91",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
-		"bootstrap-icons": "^1.10.4",
-		"eslint": "^8.38.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-lit": "^1.8.2",
+		"@types/node": "20.4.5",
+		"@types/sharedworker": "^0.0.101",
+		"@typescript-eslint/eslint-plugin": "^6.2.0",
+		"@typescript-eslint/parser": "^6.2.0",
+		"bootstrap-icons": "^1.10.5",
+		"eslint": "^8.46.0",
+		"eslint-plugin-import": "^2.28.0",
+		"eslint-plugin-lit": "^1.8.3",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"lit": "^2.7.2",
-		"rimraf": "^4.4.1",
-		"tslib": "^2.5.0",
-		"typescript": "^4.9.5",
-		"vite": "^4.2.1",
-		"vitest": "^0.29.8"
+		"lit": "^2.7.6",
+		"rimraf": "^5.0.1",
+		"tslib": "^2.6.1",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.7",
+		"vitest": "^0.33.0"
 	}
 }
