updated packages and fixed type errors from new tsconfig.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"baseUrl": ".",
-		"incremental": false,
+		"noEmit": false,
+		"emitDeclarationOnly": true,
 		"types": [
 			"vite/client",
 			"sharedworker"
