--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
 		"increment-version": "pnpm mimic increment-version"
 	},
 	"dependencies": {
-		"@custom-elements-manifest/analyzer": "^0.8.4",
-		"@monaco-editor/loader": "^1.3.3",
-		"@orama/orama": "^1.2.0",
-		"@orama/plugin-data-persistence": "^1.2.0",
-		"@orama/plugin-match-highlight": "^1.2.0",
-		"@orama/plugin-parsedoc": "^1.2.0",
+		"@custom-elements-manifest/analyzer": "^0.9.0",
+		"@monaco-editor/loader": "^1.4.0",
+		"@orama/orama": "2.0.0-beta.7",
+		"@orama/plugin-data-persistence": "2.0.0-beta.7",
+		"@orama/plugin-match-highlight": "2.0.0-beta.7",
+		"@orama/plugin-parsedoc": "2.0.0-beta.7",
 		"@sindresorhus/slugify": "^2.2.1",
 		"deepmerge-ts": "^5.1.0",
-		"globby": "^13.2.2",
-		"highlight.js": "^11.8.0",
-		"markdown-it": "^13.0.1",
+		"globby": "^14.0.0",
+		"highlight.js": "^11.9.0",
+		"markdown-it": "^13.0.2",
 		"markdown-it-anchor": "^8.6.7",
-		"monaco-editor": "^0.41.0",
-		"rollup-plugin-copy": "^3.4.0",
+		"monaco-editor": "^0.44.0",
+		"rollup-plugin-copy": "^3.5.0",
 		"tabbable": "^6.2.0"
 	},
 	"peerDependencies": {
@@ -51,21 +51,21 @@
 		"@roenlie/mimic-nodejs": "^0.0.9",
 		"@roenlie/mirage-docs": "link:",
 		"@roenlie/tsconfig": "^1.0.2",
-		"@types/markdown-it": "^13.0.0",
-		"@types/node": "20.4.10",
-		"@types/sharedworker": "^0.0.101",
-		"@typescript-eslint/eslint-plugin": "^6.3.0",
-		"@typescript-eslint/parser": "^6.3.0",
-		"bootstrap-icons": "^1.10.5",
-		"eslint": "^8.47.0",
-		"eslint-plugin-import": "^2.28.0",
-		"eslint-plugin-lit": "^1.9.1",
+		"@types/markdown-it": "^13.0.7",
+		"@types/node": "20.9.4",
+		"@types/sharedworker": "^0.0.105",
+		"@typescript-eslint/eslint-plugin": "^6.12.0",
+		"@typescript-eslint/parser": "^6.12.0",
+		"bootstrap-icons": "^1.11.2",
+		"eslint": "^8.54.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-lit": "^1.10.1",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"lit": "^2.8.0",
-		"rimraf": "^5.0.1",
-		"tslib": "^2.6.1",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.1"
+		"lit": "^3.1.0",
+		"rimraf": "^5.0.5",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.2",
+		"vite": "^5.0.2",
+		"vitest": "^0.34.6"
 	}
 }
