introduced lit-aegis framework for use in the app components. Further improvements in both some minor bug fixing as well as improving how the doc site is to use. No longer any need to do anything in the index.html file, all layout title header things moved to the config. All use of global object removed in favor of lit-aegis dependency injection. Further improvements will include opening up the dependency injection system to receive bindings and overrides from the user. This will let the user basically customize any adapters or other code that is part of the injection system.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,4 +27,33 @@
 	"typescript.preferences.importModuleSpecifierEnding": "js",
 	"lit-plugin.rules.no-incompatible-type-binding": "off",
 	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"restoreTerminals.runOnStartup": true,
+	"restoreTerminals.terminals": [
+		{
+			"splitTerminals": [
+				{
+					"name": "root",
+					"commands": []
+				}
+			]
+		},
+		{
+			"splitTerminals": [
+				{
+					"name": "dev",
+					"commands": [
+						"cd packages/docs-site",
+						"clear"
+					]
+				},
+				{
+					"name": "docs",
+					"commands": [
+						"cd packages/mirage-docs",
+						"clear"
+					]
+				}
+			]
+		},
+	],
 }
