--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -15,22 +15,17 @@
 			"types": "./dist/server/index.d.ts",
 			"default": "./dist/server/index.js"
 		},
-		"./app": {
-			"types": "./src/app/index.ts",
-			"default": "./src/app/index.ts"
-		},
+		"./app": "./src/app/index.ts",
 		"./app/*": "./src/app/*",
-		"./assets/*": "./src/assets/*"
+		"./assets/*": "./src/assets/*",
+		"./workers/*": "./dist/workers/*"
 	},
 	"scripts": {
-		"dev": "vite --config ./docs/vite.config.ts",
-		"preview": "vite preview --config ./docs/vite.config.ts",
-		"build": "vite build && tsc --project ./src/server/tsconfig.json",
-		"build:preview": "vite build --config ./docs/vite.config.ts",
+		"build": "pnpm build-server && pnpm build-workers && tsc --project ./src/server/tsconfig.json",
+		"build-server": "vite build --config ./vite.config.ts",
+		"build-workers": "vite build --config ./vite-workers.config.ts",
 		"test": "vitest run --config ./tests/vite.config.ts",
-		"clean": "rimraf node_modules dist *.tsbuildinfo",
 		"updatedeps": "pnpm update --interactive",
-		"package:local": "pnpm pack --pack-destination _packages/",
 		"increment-version": "pnpm mimic increment-version"
 	},
 	"dependencies": {
@@ -40,6 +35,7 @@
 		"@orama/plugin-data-persistence": "2.0.0-beta.10",
 		"@orama/plugin-match-highlight": "2.0.0-beta.10",
 		"@orama/plugin-parsedoc": "2.0.0-beta.10",
+		"@roenlie/lit-aegis": "^1.0.21",
 		"@sindresorhus/slugify": "^2.2.1",
 		"deepmerge-ts": "^5.1.0",
 		"globby": "^14.0.0",
@@ -51,13 +47,13 @@
 		"tabbable": "^6.2.0"
 	},
 	"peerDependencies": {
-		"tslib": "^2.6.2",
 		"lit": "^3.1.0",
+		"tslib": "^2.6.2",
 		"vite": "^5.0.10"
 	},
 	"devDependencies": {
 		"@types/markdown-it": "^13.0.7",
-		"@types/sharedworker": "^0.0.109",
+		"@types/sharedworker": "^0.0.110",
 		"bootstrap-icons": "^1.11.2"
 	}
 }
