--- a/packages/mirage-docs/src/workers/tsconfig.json
+++ b/packages/mirage-docs/src/workers/tsconfig.json
@@ -8,16 +8,22 @@
 		"emitDeclarationOnly": true,
 		"types": [
 			"vite/client",
+			"sharedworker"
+		],
+		"lib": [
+			"ESNext",
+			"DOM",
+			"DOM.Iterable",
+			"webworker"
 		],
 	},
 	"include": [
 		"./**/*.ts",
 		"./**/*.js",
-		"../app/utilities/to-words.ts",
-		"../shared/to-pascal-case.ts",
 	],
 	"exclude": [
 		"./**/*.test.ts",
 		"./**/*.bench.ts",
+		"./**/*.editor.d.ts"
 	]
 }
