--- a/.github/workflows/deploy_github_page.yml
+++ b/.github/workflows/deploy_github_page.yml
@@ -43,11 +43,15 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build self
-        run: pnpm build
+      - name: Build mirage-docs.
+        run: |
+          cd packages/mirage-docs
+          pnpm build
 
-      - name: Build Preview
-        run: pnpm build:preview
+      - name: Build docsite
+        run: |
+          cd packages/docs-site
+          pnpm build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -56,7 +60,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload preview folder
-          path: "./dist/preview"
+          path: "./packages/docs-site/dist"
 
       - name: Deploy to GitHub Pages
         id: deployment
