--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@roenlie/mirage-docs",
-	"version": "1.3.0",
+	"version": "2.0.0",
 	"description": "",
 	"author": "Kristoffer Roen-Lie",
 	"license": "MIT",
@@ -21,14 +21,15 @@
 		"./workers/*": "./dist/workers/*"
 	},
 	"scripts": {
-		"build": "pnpm build-server && pnpm build-workers && tsc --project ./src/server/tsconfig.json",
-		"build-server": "vite build --config ./vite.config.ts",
+		"build": "pnpm build-server && pnpm build-workers",
+		"build-server": "vite build --config ./vite.config.ts && tsc --project ./src/server/tsconfig.json",
 		"build-workers": "vite build --config ./vite-workers.config.ts",
 		"test": "vitest run --config ./tests/vite.config.ts",
 		"updatedeps": "pnpm update --interactive",
 		"increment-version": "pnpm mimic increment-version"
 	},
 	"dependencies": {
+		"tslib": "^2.6.2",
 		"@custom-elements-manifest/analyzer": "^0.9.0",
 		"@monaco-editor/loader": "^1.4.0",
 		"@orama/orama": "2.0.0-beta.10",
@@ -55,5 +56,6 @@
 		"@types/markdown-it": "^13.0.7",
 		"@types/sharedworker": "^0.0.110",
 		"bootstrap-icons": "^1.11.2"
-	}
+	},
+	"sideEffects": true
 }
