Small mistake when updaing npm publish after 2.0.0

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,9 +29,9 @@ jobs:
           pnpm build
 
       - name: Change package version
-        run: pnpm |
+        run: |
           cd packages/mirage-docs
-          increment-version
+          pnpm increment-version
 
       - name: Publish package
         env:
