Had to do some reworks to get it working in a consumer application. When used in a workspace, you can directly use decorators in ts code, but esbuild does not support it when used through a deeper pnpm package. Should work fine in the future when decorators are supported natively, but for the moment the application code also has to be compiled to javascript. During dev we can just change the export to point to the src folder for more smooth dev experience.

--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -10,23 +10,32 @@
 		"email": "KristofferRoenLie@gmail.com"
 	},
 	"type": "module",
+	"files": [
+		"./dist",
+		"./src",
+		"./LICENSE",
+		"./package.json",
+		"./README.md"
+	],
 	"exports": {
 		"./server": {
 			"types": "./dist/server/index.d.ts",
 			"default": "./dist/server/index.js"
 		},
-		"./app": "./src/app/index.ts",
-		"./app/*": "./src/app/*",
-		"./assets/*": "./src/assets/*",
-		"./workers/*": "./dist/workers/*"
+		"./app/*": "./dist/app/*",
+		"./workers/*": "./dist/workers/*",
+		"./assets/*": "./src/assets/*"
 	},
 	"scripts": {
 		"build": "pnpm build-server && pnpm build-workers",
-		"build-server": "vite build --config ./vite.config.ts && tsc --project ./src/server/tsconfig.json",
+		"build-server": "vite build --config ./vite.config.ts && pnpm emit-types:server && pnpm emit-types:app",
 		"build-workers": "vite build --config ./vite-workers.config.ts",
+		"emit-types:app": "tsc --project ./src/app/tsconfig.json",
+		"emit-types:server": "tsc --project ./src/server/tsconfig.json",
 		"test": "vitest run --config ./tests/vite.config.ts",
 		"updatedeps": "pnpm update --interactive",
-		"increment-version": "pnpm mimic increment-version"
+		"increment-version": "package-toolbox increment-version",
+		"package:local": "pnpm pack --pack-destination ../../_packages/"
 	},
 	"dependencies": {
 		"tslib": "^2.6.2",
