--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -58,13 +58,14 @@
 	},
 	"peerDependencies": {
 		"lit": "^3.1.0",
-		"tslib": "^2.6.2",
 		"vite": "^5.0.10"
 	},
 	"devDependencies": {
 		"@types/markdown-it": "^13.0.7",
 		"@types/sharedworker": "^0.0.110",
-		"bootstrap-icons": "^1.11.2"
+		"bootstrap-icons": "^1.11.2",
+		"lit": "^3.1.0",
+		"vite": "^5.0.10"
 	},
 	"sideEffects": true
 }
