--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
 		"globby": "^14.0.0",
 		"rimraf": "^5.0.5",
 		"tsx": "^4.6.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.10",
-		"vitest": "^1.0.4"
+		"typescript": "^5.3.3"
 	}
 }
