--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -65,7 +65,8 @@
 		"@types/sharedworker": "^0.0.110",
 		"bootstrap-icons": "^1.11.2",
 		"lit": "^3.1.0",
-		"vite": "^5.0.10"
+		"vite": "^5.0.10",
+		"vitest": "^1.0.4"
 	},
 	"sideEffects": true
 }
