--- a/packages/docs-site/package.json
+++ b/packages/docs-site/package.json
@@ -20,8 +20,9 @@
 	"dependencies": {
 		"tslib": "^2.6.2",
 		"@roenlie/mirage-docs": "workspace:^",
-		"lit": "^3.1.0",
-		"vite": "^5.0.10"
+		"lit": "^3.1.0"
 	},
-	"devDependencies": {}
+	"devDependencies": {
+		"vite": "^5.0.10"
+	}
 }
