working on redoing the config typings and organization. Not done yet.

--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -22,7 +22,7 @@
 			"types": "./dist/server/index.d.ts",
 			"default": "./dist/server/index.js"
 		},
-		"./app/*": "./dist/app/*",
+		"./app/*": "./src/app/*",
 		"./workers/*": "./dist/workers/*",
 		"./assets/*": "./src/assets/*"
 	},
