--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -27,25 +27,24 @@
 		"./assets/*": "./src/assets/*"
 	},
 	"scripts": {
+		"test": "vitest run --config ./tests/vite.config.ts",
 		"build": "pnpm build-server && pnpm build-workers",
 		"build-server": "vite build --config ./vite.config.ts && pnpm emit-types:server && pnpm emit-types:app",
 		"build-workers": "vite build --config ./vite-workers.config.ts",
-		"build-indexes": "package-toolbox build-indexes",
 		"emit-types:app": "tsc --project ./src/app/tsconfig.json",
 		"emit-types:server": "tsc --project ./src/server/tsconfig.json",
-		"test": "vitest run --config ./tests/vite.config.ts",
-		"updatedeps": "pnpm update --interactive",
+		"updatedeps": "pnpm update --interactive --latest",
 		"increment-version": "package-toolbox increment-version",
 		"package:local": "pnpm pack --pack-destination ../../_packages/"
 	},
 	"dependencies": {
 		"@custom-elements-manifest/analyzer": "^0.9.0",
 		"@monaco-editor/loader": "^1.4.0",
-		"@orama/orama": "2.0.0-beta.11",
-		"@orama/plugin-data-persistence": "2.0.0-beta.11",
-		"@orama/plugin-match-highlight": "2.0.0-beta.11",
-		"@orama/plugin-parsedoc": "2.0.0-beta.11",
-		"@roenlie/lit-aegis": "^1.0.21",
+		"@orama/orama": "2.0.0-beta.12",
+		"@orama/plugin-data-persistence": "2.0.0-beta.12",
+		"@orama/plugin-match-highlight": "2.0.0-beta.12",
+		"@orama/plugin-parsedoc": "2.0.0-beta.12",
+		"@roenlie/lit-aegis": "^1.0.23",
 		"@sindresorhus/slugify": "^2.2.1",
 		"deepmerge-ts": "^5.1.0",
 		"globby": "^14.0.0",
@@ -63,7 +62,7 @@
 	},
 	"devDependencies": {
 		"@types/markdown-it": "^13.0.7",
-		"@types/sharedworker": "^0.0.110",
+		"@types/sharedworker": "^0.0.111",
 		"bootstrap-icons": "^1.11.2",
 		"lit": "^3.1.0",
 		"vite": "^5.0.10",
