--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "tsx ./scripts/build.ts",
+		"clean": "rimraf dist node_modules",
 		"updatedeps": "pnpm -r updatedeps"
 	},
 	"devDependencies": {
@@ -10,8 +10,9 @@
 		"@roenlie/package-toolbox": "^0.0.22",
 		"@roenlie/tsconfig": "^1.0.2",
 		"@types/node": "^20.10.4",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
+		"@typescript-eslint/eslint-plugin": "^6.16.0",
+		"@typescript-eslint/parser": "^6.16.0",
+		"concurrently": "^8.2.2",
 		"eslint": "^8.55.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-lit": "^1.10.1",
