fixing debounce and some changes to deploy build rutines and added cleanup pnpm commands.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,14 +24,10 @@ jobs:
         run: pnpm install
 
       - name: Build complete project.
-        run: |
-          cd packages/mirage-docs
-          pnpm build
+        run: pnpm build
 
       - name: Change package version
-        run: |
-          cd packages/mirage-docs
-          pnpm increment-version
+        run: pnpm increment-version
 
       - name: Publish package
         env:
