--- a/packages/doc-site/package.json
+++ b/packages/doc-site/package.json
@@ -16,12 +16,11 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"updatedeps": "pnpm update --interactive --latest"
+		"updatedeps": "pnpm update --latest"
 	},
 	"dependencies": {
 		"tslib": "^2.6.2",
-		"@roenlie/mirage-docs": "workspace:^",
-		"lit": "^3.1.0"
+		"@roenlie/mirage-docs": "workspace:^"
 	},
 	"devDependencies": {
 		"vite": "^5.0.10"
