--- a/.github/workflows/deploy_github_page.yml
+++ b/.github/workflows/deploy_github_page.yml
@@ -43,15 +43,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build mirage-docs.
-        run: |
-          cd packages/mirage-docs
-          pnpm build
-
-      - name: Build docsite
-        run: |
-          cd packages/doc-site
-          pnpm build
+      - name: Build complete project.
+        run: pnpm build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
