--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"clean": "rimraf dist node_modules",
-		"updatedeps": "pnpm -r updatedeps"
+		"build": "cd packages/mirage-docs && pnpm build && cd ../doc-site && pnpm build",
+		"clean": "pnpm clean-packages && pnpm clean-root",
+		"clean-packages": "rimraf --glob ./packages/**/dist ./packages/**/node_modules ./packages/**/.mirage",
+		"clean-root": "rimraf pnpm-lock.yaml node_modules",
+		"updatedeps": "pnpm -r updatedeps",
+		"increment-version": "pnpm -r increment-version"
 	},
 	"devDependencies": {
 		"@roenlie/eslint-config": "^1.3.0",
@@ -20,6 +24,8 @@
 		"globby": "^14.0.0",
 		"rimraf": "^5.0.5",
 		"tsx": "^4.6.2",
-		"typescript": "^5.3.3"
+		"vite": "^5.0.10",
+		"typescript": "^5.3.3",
+		"lit": "^3.1.0"
 	}
 }
