--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -33,7 +33,7 @@
 		"build-workers": "vite build --config ./vite-workers.config.ts",
 		"emit-types:app": "tsc --project ./src/app/tsconfig.json",
 		"emit-types:server": "tsc --project ./src/server/tsconfig.json",
-		"updatedeps": "pnpm update --interactive --latest",
+		"updatedeps": "pnpm update --latest",
 		"increment-version": "package-toolbox increment-version",
 		"package:local": "pnpm pack --pack-destination ../../_packages/"
 	},
@@ -44,7 +44,7 @@
 		"@orama/plugin-data-persistence": "2.0.0-beta.12",
 		"@orama/plugin-match-highlight": "2.0.0-beta.12",
 		"@orama/plugin-parsedoc": "2.0.0-beta.12",
-		"@roenlie/lit-aegis": "^1.0.23",
+		"@roenlie/lit-aegis": "^1.0.24",
 		"@sindresorhus/slugify": "^2.2.1",
 		"deepmerge-ts": "^5.1.0",
 		"globby": "^14.0.0",
@@ -64,9 +64,7 @@
 		"@types/markdown-it": "^13.0.7",
 		"@types/sharedworker": "^0.0.111",
 		"bootstrap-icons": "^1.11.2",
-		"lit": "^3.1.0",
-		"vite": "^5.0.10",
-		"vitest": "^1.0.4"
+		"vitest": "^1.1.0"
 	},
 	"sideEffects": true
 }
