--- a/packages/mirage-docs/src/app/tsconfig.json
+++ b/packages/mirage-docs/src/app/tsconfig.json
@@ -6,6 +6,7 @@
 		"baseUrl": ".",
 		"noEmit": false,
 		"emitDeclarationOnly": true,
+		"incremental": true,
 		"types": [
 			"vite/client",
 		],
