--- a/.github/workflows/deploy_github_page.yml
+++ b/.github/workflows/deploy_github_page.yml
@@ -44,7 +44,7 @@ jobs:
         run: pnpm install
 
       - name: Build complete project.
-        run: pnpm compile
+        run: pnpm build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
