changed the way config is defined. Allowing for reading the ConfigEnv parameter.

--- a/packages/mirage-docs/package.json
+++ b/packages/mirage-docs/package.json
@@ -50,12 +50,12 @@
 	"dependencies": {
 		"@custom-elements-manifest/analyzer": "^0.9.0",
 		"@monaco-editor/loader": "^1.4.0",
-		"@orama/orama": "2.0.0-beta.12",
-		"@orama/plugin-data-persistence": "2.0.0-beta.12",
-		"@orama/plugin-match-highlight": "2.0.0-beta.12",
-		"@orama/plugin-parsedoc": "2.0.0-beta.12",
-		"@roenlie/lit-aegis": "^1.0.28",
-		"@roenlie/mimic-core": "^0.0.69",
+		"@orama/orama": "2.0.1",
+		"@orama/plugin-data-persistence": "2.0.1",
+		"@orama/plugin-match-highlight": "2.0.1",
+		"@orama/plugin-parsedoc": "2.0.1",
+		"@roenlie/lit-aegis": "^1.0.36",
+		"@roenlie/mimic-core": "^0.0.77",
 		"@sindresorhus/slugify": "^2.2.1",
 		"deepmerge-ts": "^5.1.0",
 		"globby": "^14.0.0",
@@ -74,8 +74,8 @@
 	"devDependencies": {
 		"@types/markdown-it": "^13.0.7",
 		"@types/sharedworker": "^0.0.111",
-		"bootstrap-icons": "^1.11.2",
-		"vitest": "^1.1.0"
+		"bootstrap-icons": "^1.11.3",
+		"vitest": "^1.2.1"
 	},
 	"sideEffects": []
 }
